monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4039/A4039.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4039;

grammar A4039 extends de.monticore.common.TestTypes {

  symbol A = Name State;

  symbol State = "state" Name;

  B = bstate:State@A;

}
